# algo_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml  live.yaml
data/seed/: nifty_seed.csv
docs/: DOS_AND_DONTS.md  PROJECT_PLAN.md  REQUIREMENTS.md  RESEARCH_PAPERS.md  ROADMAP.md  STRATEGY.md
scripts/: benchmark_strategies.py  build_universe.py  cron.example  demo_live_pipeline.py  demo_strategies.py  fetch_history.py  init_db.py  kite_login.py  paper_replay.py  paper_trade.py  refresh_sentiment.py  run_backtest.py  run_dashboard.sh  run_scheduler.py  setup_dev.sh
src/backtest/: benchmark.py  costs.py  engine.py  lookahead.py  metrics.py  monte_carlo.py  multiple_testing.py  plots.py  sensitivity.py
src/data/: anomaly.py  nse_client.py  refresh.py  storage.py  yfinance_client.py
src/features/: indicators.py
src/monitor/: dashboard.py  scheduler.py  telegram.py
src/orders/: base.py  dry_run.py  kite.py  live_sync.py  paper.py  router.py
src/risk/: circuit_breaker.py  manager.py  portfolio.py  sizer.py
src/sentiment/: aggregator.py  dedupe.py  scorer.py  scrapers.py  storage.py
src/strategies/: base.py  breakout.py  dual_momentum.py  mean_reversion.py  momentum.py  multi_factor.py  pairs.py  regime.py  registry.py  sector_rotation.py  selector.py  sentiment_momentum.py
src/universe/: replay.py  selector.py
src/utils/: logging.py  settings.py
tests/: test_anomaly.py  test_backtest_plots.py  test_circuit_breaker.py  test_costs.py  test_engine.py  test_indicators.py  test_indicators_extra.py  test_kite_stub.py  test_live_sync.py  test_lookahead_unit.py  test_metrics.py  test_monte_carlo.py  test_multiple_testing.py  test_paper_broker.py  test_portfolio.py  test_regime.py  test_registry.py  test_risk_manager.py  test_sensitivity_unit.py  test_sentiment.py  test_sentiment_dedupe.py  test_settings_merge.py  test_sizer.py  test_smoke.py  test_storage.py  test_strategies.py  test_telegram.py  test_universe.py  test_universe_replay.py
